fixed readme &  made the projct responsive

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <button id="reset">Reset</button>
                 </div>
         </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
